# shaardb-rs

./: Cargo.toml  README.md
migrations/: 20210303150100_create_tables.sql
src/: application.rs  database.rs  endpoint.rs  entity.rs  main.rs  schema.rs
