[package]
name = "shaarli-backend-rdb"
version = "0.1.0"
authors = ["Yū Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1.0.38"

[dependencies.log]
version= "0.4.14"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dependencies.async-trait]
version = "0.1.45"

[dependencies.futures]
version = "0.3.13"

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"

[dependencies.tide]
version = "0.16.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.sqlx]
version = "0.5.1"
features = ["runtime-async-std-native-tls", "sqlite", "postgres", "chrono"]

[dependencies.envy]
version = "0.4.1"

[dependencies.pretty_env_logger]
version = "0.4.0"
